--- a/bower.json
+++ b/bower.json
@@ -12,14 +12,16 @@
     "tests"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#~0.9.0",
+    "polymer": "Polymer/polymer#~0.9.3",
     "layout": "Polymer/layout",
     "iron-elements": "PolymerElements/iron-elements#~0.9.1",
     "paper-elements": "PolymerElements/paper-elements#~0.9.1",
-    "neon-animation": "PolymerElements/neon-animation#~0.9.0"
+    "neon-animation": "PolymerElements/neon-animation#~0.9.2",
+    "meteor-collection": "/home/ahinsing/Developpement/meteor/meteor-elements/meteor-collection",
+    "meteor-status": "/home/ahinsing/Developpement/meteor/meteor-elements/meteor-status"
   },
   "resolutions": {
     "webcomponentsjs": "~0.7.0",
-    "polymer": "~0.9.0"
+    "polymer": "~0.9.3"
   }
 }
