--- a/lib/bower.json
+++ b/lib/bower.json
@@ -19,5 +19,8 @@
     "paper-elements": "PolymerElements/paper-elements#~1.0.0",
     "neon-elements": "PolymerElements/neon-elements#~1.0.0",
     "meteor-elements": "atoy40/meteor-elements#~0.1.0"
+  },
+  "overrides": {
+    "webcomponentsjs": { "main": [] }
   }
 }
